--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ input:focus {
   width: 19%;
 }
 #total {
-  background: #a00da0;
+  background: #7e0227;
   padding: 5px 2px;
   border-radius: 4px;
 }
@@ -75,4 +75,7 @@ table th {
 td,
 th {
   padding: 5px;
+}
+#deletAall {
+  margin: 20px 0px;
 }
